--- a/index.html
+++ b/index.html
@@ -42,26 +42,26 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <form class="bg-dark">
+                <form class="bg-dark" style="font-family: inherit; font-size: 1rem;">
                     <p>Filter Search</p>
-                    <ul class="list-group bg-dark">
-                        <li class="list-group-item bg-dark">
+                    <ul class="list-group bg-dark" style="font-family: inherit; font-size: 1rem;">
+                        <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
                             <label for="date">Enter Date</label>
                             <input type="text" placeholder="1/10/2010" id="datetime" class="form-control"/>
                         </li>
-                        <li class="list-group-item bg-dark">
+                        <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
                             <label for="city">Enter City</label>
                             <input type="text" placeholder="benton" id="city" class="form-control" />
                         </li>
-                        <li class="list-group-item bg-dark">
+                        <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
                             <label for="state">Enter State</label>
                             <input type="text" placeholder="ar" id="state" class="form-control" />
                         </li>
-                        <li class="list-group-item bg-dark">
+                        <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
                             <label for="country">Enter Country</label>
                             <input type="text" placeholder="us" id="country" class="form-control" />
                         </li>
-                        <li class="list-group-item bg-dark">
+                        <li class="list-group-item bg-dark" style="font-family: inherit; font-size: 1rem;">
                             <label for="shape">Enter Shape</label>
                             <input type="text" placeholder="circle" id="shape" class="form-control" />
                         </li>
